working on implementing detail

--- a/party/index.html
+++ b/party/index.html
@@ -22,6 +22,6 @@
     <h2>Party Members</h2>
     <ul id="party-list"></ul>
 
-    <script src="../js/functions.js"></script>
+    <script src="../js/party.js"></script>
 </body>
 </html>
