--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Page Title</title>
+    <meta http-equiv="refresh" content="0;url=party/index.html">
+    <title>Redirecting...</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>Welcome to my website!</p>
-    <a href="party/"> Manage Party</a>
+    <p>If you are not redirected, <a href="party/index.html">click here</a>.</p>
 </body>
 </html>
