--- a/party/index.html
+++ b/party/index.html
@@ -2,25 +2,42 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/layout.css"> <!-- Link to the new layout.css file -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Party Management</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Party Management</h1>
 
-    <h2>Add New Member</h2>
-    <form id="add-member-form">
-        <input type="text" id="member-name" placeholder="Name" required>
-        <input type="text" id="member-class" placeholder="Class" required>
-        <input type="number" id="member-xp" placeholder="Starting XP" min="0" required>
-        <button type="submit">Add Member</button>
-    </form>
+    <div class="container">
+        <div class="left-half">
+            <h2>Add New Member</h2>
+            <form id="add-member-form" class="form-container">
+                <div class="mb-6">
+                    <label for="member-name" class="form-label">Name</label>
+                    <input type="text" id="member-name" required class="form-control">
+                </div>
+                <div class="mb-6">
+                    <label for="member-class" class="form-label">Class</label>
+                    <input type="text" id="member-class" placeholder="Class" required class="form-control">
+                </div>
+                <div class="mb-6">
+                    <label for="member-xp" class="form-label">Starting XP</label>
+                    <input type="number" id="member-xp" placeholder="0" min="0" required class="form-control">
+                </div>
+                <button type="submit" class='btn btn-primary'>Add Member</button>
+            </form>
+        </div>
 
-    <h2>Party Members</h2>
-    <ul id="party-list"></ul>
+        <div class="right-half">
+            <h2>Party Members</h2>
+            <ul id="party-list" class="list-group"></ul>
+        </div>
+    </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/party.js"></script>
 </body>
 </html>
