--- a/party/add-equipment.html
+++ b/party/add-equipment.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <button id="back-btn" class="btn btn-secondary">Back to Party List</button>
+    
     <div class="container">
-        
         <div class="left-half">
-            <h1 id="member-name">Managing Equipment</h1>
+            <h1 id="member-name">Equipment Types:</h1>
 
             <div class="button-container">
                 <button id="armor-tab" class="btn btn-outline-primary">Armor</button>
@@ -22,19 +22,24 @@
 
         <div class="right-half">
             <h2>Current Equipment</h2>
-            <ul id="armor-current-list"></ul>
-            <ul id="weapons-current-list"></ul>
-            <ul id="misc-current-list"></ul>
+            <div class="equipment-list-container">
+                <ul id="armor-current-list" class="equipment-list"></ul>
+                <ul id="weapons-current-list" class="equipment-list"></ul>
+                <ul id="misc-current-list" class="equipment-list"></ul>
+            </div>
 
             <h2>Available Equipment</h2>
-            <ul id="armor-list"></ul>
-            <ul id="weapons-list"></ul>
-            <ul id="misc-list"></ul>
+            <div class="equipment-list-container">
+                <ul id="armor-list" class="equipment-list"></ul>
+                <ul id="weapons-list" class="equipment-list"></ul>
+                <ul id="misc-list" class="equipment-list"></ul>
+            </div>
 
             <button id="load-more-btn" class="btn btn-primary">Load More</button>
         </div>
     </div>
 
-    <script src="../js/add-equipment.js"></script>
+    <script type="module" src="../js/add-equipment.js"></script>
+    <script type="module" src="../js/utils.js"></script>
 </body>
 </html>
