--- a/party/detail.html
+++ b/party/detail.html
@@ -8,6 +8,7 @@
     <title>Party Member Details</title>
 </head>
 <body>
+    <a href="../index.html" class="btn btn-secondary">Back to Party List</a>
     <div class="container">
         <div class="left-half">
             <h1>Party Member Details</h1>
@@ -17,7 +18,9 @@
             <h3>Health: <span id="member-health">Loading...</span></h3>
             <h3>XP: <span id="member-xp">Loading...</span></h3>
             <h3>Level: <span id="member-level">Loading...</span></h3>
+        </div>
 
+        <div class="right-half">
             <h3>Edit Health</h3>
             <form id="edit-health-form" class="form-container">
                 <input type="number" id="health-input" placeholder="Health" min="0" required>
@@ -29,16 +32,10 @@
                 <input type="number" id="xp-input" placeholder="XP" min="0" required>
                 <button type="submit" class="btn btn-primary">Update XP</button>
             </form>
-
-            <a href="../index.html" class="btn btn-secondary">Back to Party List</a>
-        </div>
-
-        <div class="right-half">
-            <h2>Equipment</h2>
-            <div id="equipment"></div>
         </div>
     </div>
 
-    <script src="../js/detail.js"></script>
+    <script type="module" src="../js/detail.js"></script>
+    <script type="module" src="../js/utils.js"></script>
 </body>
 </html>
