--- a/party/index.html
+++ b/party/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/layout.css"> <!-- Link to the new layout.css file -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,6 +37,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/party.js"></script>
+    <script type="module" src="../js/party.js"></script>
+    <script type="module" src="../js/party.js"></script>
 </body>
 </html>
