--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=party/index.html">
+    <meta http-equiv="refresh" content="0;url=auth/index.html">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="party/index.html">click here</a>.</p>
+    <p>If you are not redirected, <a href="./auth/index.html">click here</a>.</p>
 </body>
 </html>
