--- a/campaign/index.html
+++ b/campaign/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
+    <button id="user-btn" class="btn btn-secondary">Edit User</button>
     <div class="container mt-4">
         <h2>Welcome to D&D Party Manager! <span id="username"></span></h2>
+        
         <div id="campaign-list" class="list-group mt-3"></div>
         <button id="create-campaign-btn" class="btn btn-success mt-3">Create New Campaign</button>
 
