--- a/party/add-items.html
+++ b/party/add-items.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <button id="back-btn" class="btn btn-secondary">Back to Party List</button>
+    <button id="back-btn" class="btn btn-secondary">Back to Party Dashboard</button>
     
     <div class="container">
         <div class="left-half">
