--- a/party/detail.html
+++ b/party/detail.html
@@ -8,7 +8,7 @@
     <title>Party Member Details</title>
 </head>
 <body>
-    <button id="back-btn" class="btn btn-secondary">Back to Party List</button>
+    <button id="back-btn" class="btn btn-secondary">Back to Party Dashboard</button>
     <div class="container">
         <div class="left-half">
             <h1>Party Member Details</h1>
