--- a/party/index.html
+++ b/party/index.html
@@ -9,8 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-
     <div class="container">
+        <button id="back-btn" class="btn btn-secondary">Back to Campaign Dashboard</button>
         <div class="left-half">
             <h2>Add New Member</h2>
             <form id="add-member-form" class="form-container">
