added youtube link after it finished uploading

--- a/auth/edit-user.html
+++ b/auth/edit-user.html
@@ -16,6 +16,7 @@
 </head>
 <body>
   <div class="container">
+    <button id="back-btn" class="btn btn-secondary">Back to Campaign Dashboard</button>
     <h2 class="mt-4">Edit User Information</h2>
     <div id="status" class="alert d-none"></div>
     <form id="edit-form" style="width: 100%; max-width: 500px;">
