--- a/campaign/index.html
+++ b/campaign/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <button id="user-btn" class="btn btn-secondary">Edit User</button>
+    <button id="logout-btn" class="btn btn-danger">Log Out</button>
     <div class="container mt-4">
         <h2>Welcome to D&D Party Manager! <span id="username"></span></h2>
         
